fix overlapping active slide

--- a/css/style.css
+++ b/css/style.css
@@ -137,22 +137,22 @@ legend {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 0;
-  height: 0;
+  width: 100;
+  height: 100;
   border: 2px solid blue;
   border-radius: 50%;
   font-size: 50px;
   font-weight: 700;
   scale: 1;
-  -webkit-transition: top 1s ease-in-out, left 1s ease-in-out, translate 1s ease-in-out, width 0.5s ease-out, height 0.5s ease-out;
-  transition: top 1s ease-in-out, left 1s ease-in-out, translate 1s ease-in-out, width 0.5s ease-out, height 0.5s ease-out;
+  -webkit-transition: top 1s ease-in-out, left 1s ease-in-out, translate 1s ease-in-out, width 1s ease-out, height 1s ease-out;
+  transition: top 1s ease-in-out, left 1s ease-in-out, translate 1s ease-in-out, width 1s ease-out, height 1s ease-out;
 }
 .slider__circle_active {
   left: 450px;
   top: 100px;
   height: 300px;
   width: 300px;
-  -webkit-transition: top 1s ease-in-out, left 1s ease-in-out, translate 1s ease-in-out, width 0.5s ease-out, height 0.5s ease-out;
-  transition: top 1s ease-in-out, left 1s ease-in-out, translate 1s ease-in-out, width 0.5s ease-out, height 0.5s ease-out;
+  -webkit-transition: top 1s ease-in-out, left 1s ease-in-out, translate 1s ease-in-out, width 1s ease-out, height 1s ease-out;
+  transition: top 1s ease-in-out, left 1s ease-in-out, translate 1s ease-in-out, width 1s ease-out, height 1s ease-out;
   z-index: 5;
 }
